--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,19 +1,13 @@
-<nz-layout class="app-layout">
+<nz-layout >
   <nz-header>
-    <div class="logo">
-      <a>
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>NG-ZORRO</h1>
-      </a>
-    </div>
-    <ul nz-menu class="top-nav" nzTheme="dark" nzMode="horizontal">
+    <ul nz-menu class="flex flex-row bg-blue-900">
       <li nz-menu-item routerLinkActive="ant-menu-item-selected" routerLink="/welcome">Home</li>
-      <li nz-menu-item>Account</li>
+      <li class="text-3xl font-bold underline" nz-menu-item>Account</li>
       <li nz-menu-item>Profile</li>
     </ul>
   </nz-header>
   <nz-content>
-    <div class="inner-content">
+    <div>
       <router-outlet></router-outlet>
     </div>
   </nz-content>
