--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,14 +1,3 @@
-<nz-layout >
-  <nz-header>
-    <ul nz-menu class="flex flex-row bg-blue-900">
-      <li nz-menu-item routerLinkActive="ant-menu-item-selected" routerLink="/welcome">Home</li>
-      <li class="text-3xl font-bold underline" nz-menu-item>Account</li>
-      <li nz-menu-item>Profile</li>
-    </ul>
-  </nz-header>
-  <nz-content>
-    <div>
-      <router-outlet></router-outlet>
-    </div>
-  </nz-content>
-</nz-layout>
+<div>
+  <h1 class="text-3xl font-bold underline">Test</h1>
+</div>
